Updated index.html, Added md.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<div class="tenor-gif-embed" data-postid="5368742967077568799" data-share-method="host" data-aspect-ratio="0.564257" data-width="100%"><a href="https://tenor.com/view/shotgun-mustard-gas-gif-5368742967077568799">Shotgun Mustard Gas GIF</a>from <a href="https://tenor.com/search/shotgun-gifs">Shotgun GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+<!DOCTYPE html>
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <title>Placeholder</title>
+    <link href="styles.css" rel="stylesheet">
+    <meta content="Grow-an homepage" name="description">
+  
+    <meta content="" property="og:title">
+    <meta content="" property="og:type">
+    <meta content="" property="og:url">
+    <meta content="" property="og:image">
+    <meta content="" property="og:image:alt">
+  
+    <link href="/icon.png" rel="icon" sizes="any">
+    <link href="/icon.png" rel="icon" type="image/svg+xml">
+    <link href="icon.png" rel="apple-touch-icon">
+  
+    <link href="site.webmanifest" rel="manifest">
+    <meta content="#fafafa" name="theme-color">
+  </head>
+<body>
+    <h1>placeholder</h1>
+    <a href="mh.html" >shotgun-mustard-gas</a>
+</body>
