--- a/index.html
+++ b/index.html
@@ -21,5 +21,5 @@
   </head>
 <body>
     <h1>placeholder</h1>
-    <a href="mh.html" >shotgun-mustard-gas</a>
+    <a href="mg.html" >shotgun-mustard-gas</a>
 </body>
